# kubeflow-examples

./: .gitignore  CODEOWNERS  README.md
SC2_Kubecon/: 1_basicSC2python.py  2_combat.py  3_generatingTactics.py  4_generatingData.py  5_botVsBot.py  6_training.py  README.md  requirements.txt
aks-spot-instances/: 01-base-workload.ipynb  02-spot-workload.ipynb  03-spot-retries-workload.ipynb
bitcoin_price/: BTC-USD.csv  bitcoin-price-prediction-using-lstm.ipynb
cell-towers-US/: Dockerfile  README.md  celltowers.csv  pipeline-cellTowersUS.ipynb  requirements.txt  us2021census.csv
credit-risk/: 01-prep-datalake.sh  README.md
custom-component/: Dockerfile  README.md  component.ipynb  component.yaml  main.py  requirements.txt
data-drift/: .gitignore  README.md  data-drift-training.ipynb  deploy-model.yaml  e2e-pipeline-drift.ipynb  online-data-drift.yaml
ds-productivity/: automl-iris.ipynb  automl-titanic.ipynb  bucket.ipynb  eda-iris.ipynb  eda-titanic.ipynb
e2e-wine-kfp-mlflow/: .gitignore  README.md  admin-integrations.sh  deploy-component.yaml  e2e-kfp-mlflow-seldon-pipeline.ipynb  e2e-kfp-mlflow2-seldon-pipeline.ipynb  expose.sh  nb-requirements.txt  pipeline.py  preprocess-component.yaml  preprocessed.parquet  proxy-e2e-kfp-mlflow-seldon-pipeline.ipynb  raw-wine-experiment.ipynb  requirements.txt  (+3 more)
ros_snap_object_detection/: CMakeLists.txt  README.md  package.xml  setup.py
ros_snap_object_detection/launch/: demo.launch
ros_snap_object_detection/snap/: snapcraft.yaml
ros_snap_object_detection/src/ai_kubeflow_demo/: ai_kubeflow_demo.py
(+167 files in other folders)
